--- a/src/main/resources/templates/editarCategoria.html
+++ b/src/main/resources/templates/editarCategoria.html
@@ -42,6 +42,15 @@
 						th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 				</div>
 			</div>
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Descripcion</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{descripcion}" class="form-control"
+						th:errorclass="'form-control alert-danger'" /> <small
+						class="form-text text-danger"
+						th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></small>
+				</div>
+			</div>
 		
 			<div class="form-group row">
 	
