--- a/src/main/resources/templates/formProducto.html
+++ b/src/main/resources/templates/formProducto.html
@@ -8,17 +8,10 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Spring Boot</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a></li>
+				<li class="nav-item"><a class="nav-link" th:href="@{/listarProducto}">Clientes</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -27,12 +20,12 @@
 		<h1 th:text="${titulo}"
 			class="text-secondary border border-success border-top-0 border-left-0 border-right-0"></h1>
 
-		<div th:object="${cliente}" th:remove="tag">
+		<div th:object="${producto}" th:remove="tag">
 			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
 			</ul>
 		</div>
-		<form th:action="@{/form}" th:object="${cliente}" method="post">
+		<form th:action="@{/crearProducto}" th:object="${producto}" method="post">
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-6">
@@ -43,34 +36,25 @@
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Apellido</label>
+				<label class="col-sm-2 col-form-label">precio</label>
 				<div class="col-sm-6">
-					<input type="text" th:field="*{apellido}" class="form-control"
+					<input type="text" th:field="*{precio}" class="form-control"
 						th:errorclass="'form-control alert-danger'" /> <small
 						class="form-text text-danger"
-						th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+						th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></small>
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Email</label>
+				<label class="col-sm-2 col-form-label">stock</label>
 				<div class="col-sm-6">
-					<input type="text" th:field="*{email}" class="form-control"
+					<input type="text" th:field="*{stock}" class="form-control"
 						th:errorclass="'form-control alert-danger'" /> <small
 						class="form-text text-danger"
-						th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+						th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"></small>
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Fecha</label>
-				<div class="col-sm-6">
-					<input type="text" class="form-control" th:field="*{createAt}"
-						th:errorclass="'form-control alert-danger'" /> <small
-						class="form-text text-danger"
-						th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
-				</div>
-			</div>
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label">Categoria</label>
+				<label class="col-sm-2 col-form-label">categoria</label>
 				<div class="col-sm-6">
 					<input type="text" th:field="*{categoria}" class="form-control"
 						th:errorclass="'form-control alert-danger'" /> <small
