--- a/src/main/resources/templates/listarCategoria.html
+++ b/src/main/resources/templates/listarCategoria.html
@@ -36,6 +36,7 @@
 				<tr>
 					<th>id</th>
 					<th>nombre</th>
+					<th>descripcion</th>
 					<th>editar</th>
 					<th>eliminar</th>
 				</tr>
@@ -44,6 +45,7 @@
 				<tr th:each="categoria: ${categorias}">
 					<td th:text="${categoria.idcategoria}"></td>
 					<td th:text="${categoria.nombre}"></td>
+					<td th:text="${categoria.descripcion}"></td>
 					<td><a class="btn btn-primary btn-xs" th:href="@{/editarCategoria/} + ${categoria.idcategoria}" th:text="'editar'"></a></td>
 					<td><a class="btn btn-danger btn-xs" th:href="@{/eliminarCategoria/} + ${categoria.idcategoria}" th:text="'eliminar'" onclick="return confirm('Estás seguro que quieres eliminar?');"></a></td>
 				</tr>
