subido los html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,9 +17,9 @@
                     <img src="img/logo.png" alt="">
                 </div>
                 <div class="enlaces" id="enlaces">
-                    <a href="" id="enlace-inicio" class="btn-header">Inicio</a>
+                    <a href="/" id="enlace-inicio" class="btn-header">Inicio</a>
                     <a href="listarProducto" id="enlace-equipo" class="btn-header">Productos</a>
-                    <a href="#" id="enlace-servicio" class="btn-header">Inventario</a>
+                    <a href="admin" id="enlace-servicio" class="btn-header">Inventario</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Ventas</a>
                     <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
                 </div>
