--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,9 +19,8 @@
                 <div class="enlaces" id="enlaces">
                     <a href="/" id="enlace-inicio" class="btn-header">Inicio</a>
                     <a href="listarProducto" id="enlace-equipo" class="btn-header">Productos</a>
-                    <a href="admin" id="enlace-servicio" class="btn-header">Inventario</a>
-                    <a href="#" id="enlace-trabajo" class="btn-header">Ventas</a>
-                    <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
+                    <a href="crearProducto" id="enlace-equipo" class="btn-header">Contactos</a>
+                    <a href="login" id="enlace-servicio" class="btn-header">Iniciar Sesion</a>
                 </div>
                 <div class="icono" id="open">
                     <span>&#9776</span>
