--- a/src/main/resources/templates/formCliente.html
+++ b/src/main/resources/templates/formCliente.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">  
  <head>
+ <link rel="stylesheet" href="../static/css/jquery-ui.min.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
@@ -321,6 +322,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
-	
+	<script src="../static/js/jquery-ui.min.js"></script>
   </body>
 </html>
